regapp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  namespace: projet-devops
  labels:
     app: hello-world

spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world

  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: marcovillage/hello-world:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
