regapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  labels:
    app: hello-world
spec:
  selector:
    app: hello-world

  ports:
    - port: 8080
      targetPort: 8080

  type: LoadBalancer
