regapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-world-ingress
  namespace: projet-devops

spec:
  ingressClassName: nginx

  rules:
  - host: hello-world.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: hello-world-service
            port:
              number: 8080
